prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/syntax_errors/expected_expression.nut
// EXPECT_ERROR: "expected 'expression'"
let x =
